FIX header right overflow for small screens

--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,7 @@ img {
   }
 }
 
-@media(max-width: 420px) {
+@media(max-width: 470px) {
   * {
     max-width: 100vw;
   }
